Only check for configuration changes when the ones we care about change

BUG: 447939


(cherry picked from commit 14190aea46ea2c3f36f0734bfc537198c173b7e3)